# unicode-rs

./: .gitignore  Cargo.toml  README.md
src/: codepoint.rs  general_category.rs  lib.rs
