[package]
name = "unicode-rs"
version = "0.1.0" # remember to update version in lib.rs
authors = ["printfn <printfn@users.noreply.github.com>"]
edition = "2018"
description = "Unicode Rust Library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/printfn/unicode-rs"
readme = "README.md"
keywords = ["text", "unicode"]
categories = ["no-standard-library", "text-processing", "internationalization"]

[dependencies]
